[tool.poetry]
name = "algorithm_coordinate"
version = "0.1.0"
description = ""
authors = ["dimetry537 <maksakov1988@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
shapely = "^2.0.2"
networkx = "^3.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
